Fixes logo on smaller screens

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,9 +80,4 @@
     {
         width:85%;
     }
-
-    .app_logo
-    {
-        width: 14%;
-    }
 }
